not responsive, but at least it works :D

--- a/index.html
+++ b/index.html
@@ -73,6 +73,78 @@
                 </div>
             </div>
         </section>
+
+        <section id="ham-advantages" class="ham-advantages">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-3 adv-elem">
+                        <div class="adv-icon"><i class="icon-pointer"></i></div>
+                        <h3 class="adv-header">Different theme option</h3>
+                    </div>
+                    <div class="col-sm-3 adv-elem">
+                        <div class="adv-icon"><i class="icon-diamant"></i></div>
+                        <h3 class="adv-header">fully customizable</h3>
+                    </div>
+                    <div class="col-sm-3 adv-elem">
+                        <div class="adv-icon"><i class="icon-lamp"></i></div>
+                        <h3 class="adv-header">unlimited support</h3>
+                    </div>
+                    <div class="col-sm-3 adv-elem">
+                        <div class="adv-icon"><i class="icon-devices"></i></div>
+                        <h3 class="adv-header">responsive all device</h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="ham-features" class="ham-features">
+            <div class="container">
+                <h2 class="section-header">Creative Amazing Features</h2>
+                <div class="two-lines">
+                    <img class="two-lines-img" src="img/twoLines.png" alt="lines">
+                </div>
+                <div class="row">
+
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature1"></span>Retina Ready</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature2"></span>Creative Blog Style</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature3"></span>Icon Fonts</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature4"></span>Parallax Effects</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature5"></span>Amazing Interface</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature6"></span>SEO Optimized</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature7"></span>Creative Solutions</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature8"></span>Mega Menus</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+                    <div class="feature-item col-sm-6 col-md-4">
+                        <h3 class="feature-header"><span class="feature-icon icon-feature9"></span>Custom Backgrounds</h3>
+                        <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
+                    </div>
+
+                </div>
+            </div>
+        </section>
     </main>
 
 
