--- a/lis/icomoon/demo.html
+++ b/lis/icomoon/demo.html
@@ -15,8 +15,7 @@
         <h1 class="mvm mtn fgc1">Grid Size: Unknown</h1>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="ic
-                on-arrow-left">
+                <span class="icon-arrow-left">
                 
                 </span>
                 <span class="mls"> icon-arrow-left</span>
