not responsive, but at least it works and some bugs are fixed :D

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>theHam</title>
 
     <link rel="stylesheet" href="lis/bootstrap-3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="fonts/fontie-package/Montserrat.css">
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="lis/OwlCarousel2-2.2.1/OwlCarousel2-2.2.1/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="lis/OwlCarousel2-2.2.1/OwlCarousel2-2.2.1/dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
 <body>
 
