not responsive, but at least it works and some bugs are fixed :D

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="lis/OwlCarousel2-2.2.1/OwlCarousel2-2.2.1/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="lis/OwlCarousel2-2.2.1/OwlCarousel2-2.2.1/dist/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <body>
 
@@ -143,6 +143,23 @@
                         <p class="feature-decsription">All our modules are built with the possi bility to thse choose between different design and you change.</p>
                     </div>
 
+                </div>
+            </div>
+        </section>
+
+        <section id="about-us" class="about-us">
+            <div class="container">
+                <div class="row">
+                    <div class="about-us-devices">
+                        <img src="img/about-us-devices.png" alt="">
+                    </div>
+                    <div class="col-sm-6 col-sm-offset-6">
+                        <h2 class="section-header">About Our Company</h2>
+                        <div class="two-lines">
+                            <img class="two-lines-img" src="img/twoLines.png" alt="lines">
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </section>
