nothing has been done 2

--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
                 <div class="two-lines">
                     <img class="two-lines-img" src="img/twoLines.png" alt="lines">
                 </div>
+
+                <ul class="mixitup-filters">
+                    <li>
+                        <button type="button" data-mixitup-control data-filter="all" ></button>
+                    </li>
+                </ul>
             </div>
         </section>
 
