--- a/index.html
+++ b/index.html
@@ -255,9 +255,21 @@
                     <img class="two-lines-img" src="img/twoLines.png" alt="lines">
                 </div>
 
-                <ul class="mixitup-filters">
+                <ul class="mixitup-filters list-unstyled">
                     <li>
-                        <button type="button" data-mixitup-control data-filter="all" ></button>
+                        <button type="button" data-mixitup-control data-filter="all" class="mixitup-active">All</button>
+                    </li>
+                    <li>
+                        <button type="button" data-mixitup-control data-filter="gd">Graphic Design</button>
+                    </li>
+                    <li>
+                        <button type="button" data-mixitup-control data-filter="wd">Web Design</button>
+                    </li>
+                    <li>
+                        <button type="button" data-mixitup-control data-filter="lp">Landing Pages</button>
+                    </li>
+                    <li>
+                        <button type="button" data-mixitup-control data-filter="wp">Wordpress</button>
                     </li>
                 </ul>
             </div>
@@ -293,11 +305,19 @@
         </section>
     </main>
 
+    <div class="loader">
+        <div class="css-loader">
+            <div id="inTurnFadingTextG"><div id="inTurnFadingTextG_1" class="inTurnFadingTextG">L</div><div id="inTurnFadingTextG_2" class="inTurnFadingTextG">o</div><div id="inTurnFadingTextG_3" class="inTurnFadingTextG">a</div><div id="inTurnFadingTextG_4" class="inTurnFadingTextG">d</div><div id="inTurnFadingTextG_5" class="inTurnFadingTextG">i</div><div id="inTurnFadingTextG_6" class="inTurnFadingTextG">n</div><div id="inTurnFadingTextG_7" class="inTurnFadingTextG">g</div></div>
+        </div>
+    </div>
+
 
     <script src="lis/jQuery/jquery-3.2.1.min.js"></script>
     <script src="lis/bootstrap-3.3.7/js/bootstrap.min.js"></script>
     <script src="lis/OwlCarousel2-2.2.1/OwlCarousel2-2.2.1/dist/owl.carousel.min.js"></script>
     <script src="lis/mixitup/mixitup.min.js"></script>
+    <script src="lis/waypoints/jquery.waypoints.min.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 </html>
